--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-                                                  <head>
+                                                  <head> <meta charset="utf8">
     <title>sweeeeeeee</title> 
   </head>
 	  <body><div id="swe"></div>
