--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <title>sweeeeeeee</title> 
   </head>
 	  <body><div id="swe"></div>
-	    <img id="sbahjimg"/><script type="text/javascript" src="jquery.js"></script>
+	    <img id="sbahjimg"/>
     <script src="popup.js"></script>
   </body>
 			<style>body{font-family:"Comic Sans MS","Comic Sans";background:blue;color:red}</style>
