--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,23 @@
 <!doctype html>
 <html>
-                                                  <head> <meta charset="utf8">
-    <title>sweeeeeeee</title> 
-  </head>
-	  <body><div id="swe"></div>
-	    <img id="sbahjimg"/>
-    <script src="popup.js"></script>
-  </body>
-			<style>body{font-family:"Comic Sans MS","Comic Sans";background:blue;color:red}</style>
-                                        <script type="text/javascript" src="injected.js"></script>        </html>
+
+<head>
+	<meta charset="utf8">
+	<title>sweeeeeeee</title>
+</head>
+
+<body>
+	<div id="swe"></div>
+	<img id="sbahjimg" />
+	<script src="popup.js"></script>
+</body>
+<style>
+	body {
+		font-family: "Comic Sans MS", "Comic Sans";
+		background: blue;
+		color: red
+	}
+</style>
+<script type="text/javascript" src="injected.js"></script>
+
+</html>
